Fix the alignment to make everything look pretty.
Adds a negative text indent to the octicon-link span to make text things
align correctly again. Looks nice. :)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -288,6 +288,7 @@
 .octicon-link:before {
     content: '\f05c'}
 .octicon-link {
+    text-indent: -25px;
     opacity: 0;
     transition: opacity .25s ease-in-out;
     -moz-transition: opacity .25s ease-in-out;
